  * bug fix: inline expansions of known functions were subject to
    step-instrumentation in high debug policies, leading to problems
    with type-inference.
  * bug fix: compiler failed to differentiate between different CONS
    types in some cases.
  * bug fix: fixed input, output and error redirection in RUN-PROGRAM
    for win32. (thanks to Mike Thomas and Yaroslav Kavenchuk)

changes in sbcl-0.9.15 relative to sbcl-0.9.14:
  * added support for the ucs-2 external format.  (contributed by Ivan
    Boldyrev)
  * minor incompatible change: pretty printing of objects of type
    (cons symbol) is, in the default pprint-dispatch-table, now
    sensitive to whether the symbol satisfies FBOUNDP.  (thanks to
    Marcus Pearce)
  * minor incompatible change: SB-MOP:FINALIZE-INHERITANCE is now
    called later in a class's lifetime, possibly as late as when the
    first instance of the class is created.  Previously,
    SB-MOP:FINALIZE-INHERITANCE was called by the system as soon as a
    class became finalizeable.
  * fixed bug: FILE-POSITION sometimes returned inconsistent results
    for multibyte external-format streams.  (thanks to "vbzoli")
  * fixed bug: CHANGE-CLASS would fail to preserve the values of slots
    with :ALLOCATION :CLASS inherited from superclasses of the
    original class.
  * fixed bug: anonymous classes can now be created using the :NAME
    initarg and MAKE-INSTANCE / REINITIALIZE-INSTANCE, as specified by
    AMOP.  (reported by Leonid Slobodov on comp.lang.lisp)
  * fixed bug: core-files saved with :EXECUTABLE T can again be 
    executed when SBCL_HOME isn't set. (reported by James Knight)
  * fixed bug: toplevel LOCALLY forms with declarations could 
    occasionally get miscompiled. (reported by Yaroslav Kavenchuk)
  * fixed bug: printing from several different threads using different
    values of *print-case* could cause invalid output, due to 
    some internal special variables of the printer not being bound